RESOLVED FIXED190394
r236735 has some dead ASSERTs that need to be moved
https://bugs.webkit.org/show_bug.cgi?id=190394
Summary r236735 has some dead ASSERTs that need to be moved
Xabier Rodríguez Calvar
Reported 2018-10-08 23:33:16 PDT
+++ This bug was initially created as a clone of Bug #190143 +++ The MP4 file used in this URL does not contain a stss (Sync Sample Box). In consequence, in acordance with the ISO BMFF spec, all samples are assumed to be sync frames... But in this case that is not true, it's just that the file is wrong (e.g. created with a buggy muxer). http://orange-opensource.github.io/hasplayer.js/1.2.0/player.html?url=http://playready.directtaps.net/smoothstreaming/SSWSS720H264/SuperSpeedway_720.ism/Manifest The way it works in other browsers is because instead of trusting the MP4 stss table, they rely on parsing the h264 frames. We can do that too, using h264parse.
Attachments
Patch (2.13 KB, patch)
2018-10-09 00:08 PDT, Alicia Boya García
no flags
Alicia Boya García
Comment 1 2018-10-09 00:08:27 PDT
WebKit Commit Bot
Comment 2 2018-10-09 10:40:10 PDT
Comment on attachment 351867 [details] Patch Clearing flags on attachment: 351867 Committed r236967: <https://trac.webkit.org/changeset/236967>
WebKit Commit Bot
Comment 3 2018-10-09 10:40:11 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2018-10-09 10:41:26 PDT
Note You need to log in before you can comment on or make changes to this bug.