[MSE][GStreamer] r236735 has some dead ASSERTs that need to be moved https://bugs.webkit.org/show_bug.cgi?id=190394

Reviewed by Xabier Rodriguez-Calvar.

* platform/graphics/gstreamer/mse/AppendPipeline.cpp:
(WebCore::createOptionalParserForFormat):


Canonical link: https://commits.webkit.org/205350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236967 268f45cc-cd09-0410-ab3c-d52691b4dbfc